--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-session": "^1.17.0",
     "http-errors": "~1.6.3",
     "mongoose": "^5.7.9",
+    "mongoose-findorcreate": "^3.0.0",
     "morgan": "~1.9.1",
     "nodemailer": "^6.3.1",
     "passport": "^0.4.0",
